style(firefox): tweaking sidebar width and updating neovim

--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -28,6 +28,18 @@ toolbaritem#urlbar-container {
 
 
 /**
+ * SIDEBAR
+ */
+
+#sidebar {
+  max-width: none !important;
+  min-width: 0px !important;
+  width: 350px !important;
+}
+
+
+
+/**
  * TAB BAR
  */
 
