--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -30,7 +30,7 @@ toolbaritem#urlbar-container {
 
 #sidebar {
   max-width: none !important;
-  min-width: 0px !important;
+  min-width: 0 !important;
   width: 350px !important;
 }
 
