feat(kitty): Making configuration symlinked and organizing and updating configuration.

--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -11,6 +11,7 @@
   --inline-tab-padding: 8px 1px 14px !important;
   --urlbar-icon-padding: 4px !important;
   --urlbar-min-height: 26px !important;
+  --toolbarbutton-border-radius: 3px !important;
 }
 
 hbox#urlbar {
@@ -22,8 +23,6 @@ toolbaritem#urlbar-container {
   --urlbar-container-height: 33px !important;
 }
 
-
-
 /**
  * SIDEBAR
  */
@@ -33,8 +32,6 @@ toolbaritem#urlbar-container {
   min-width: 0 !important;
   width: 350px !important;
 }
-
-
 
 /**
  * TAB BAR
@@ -101,8 +98,6 @@ toolbaritem#urlbar-container {
   }
 */
 
-
-
 /**
  * BOOKMARKS TOOLBAR
  */
@@ -161,8 +156,6 @@ toolbarbutton:hover:not(.bookmark-item) {
   padding: 0 3px !important;
 }
 
-
-
 /**
  * NAV BAR
  */
@@ -183,130 +176,7 @@ toolbarbutton:hover:not(.bookmark-item) {
   height: 12px !important;
 }
 
-/* 
-┌─┐┬┌┬┐┌─┐┬  ┌─┐
-└─┐││││├─┘│  ├┤ 
-└─┘┴┴ ┴┴  ┴─┘└─┘
-┌─┐┌─┐─┐ ┬      
-├┤ │ │┌┴┬┘      
-└  └─┘┴ └─
-
-by Miguel Avila
-
-*/
-
-/*
- 
-┌─┐┌─┐┌┐┌┌─┐┬┌─┐┬ ┬┬─┐┌─┐┌┬┐┬┌─┐┌┐┌
-│  │ ││││├┤ ││ ┬│ │├┬┘├─┤ │ ││ ││││
-└─┘└─┘┘└┘└  ┴└─┘└─┘┴└─┴ ┴ ┴ ┴└─┘┘└┘
-
-*/
-
-:root {
-  --sfwindow: #19171a;
-  --sfsecondary: #201e21;
-}
-
-/* Urlbar View */
-
-/*─────────────────────────────*/
-/* Comment this section if you */
-/* want to show the URL Bar    */
-/*─────────────────────────────*/
-
-.urlbarView {
-  display: none !important;
-}
-
-/*─────────────────────────────*/
-
-/* 
-┌─┐┌─┐┬  ┌─┐┬─┐┌─┐
-│  │ ││  │ │├┬┘└─┐
-└─┘└─┘┴─┘└─┘┴└─└─┘ 
-*/
-
-/* Tabs colors  */
-#tabbrowser-tabs:not([movingtab])
-  > #tabbrowser-arrowscrollbox
-  > .tabbrowser-tab
-  > .tab-stack
-  > .tab-background[multiselected='true'],
-#tabbrowser-tabs:not([movingtab])
-  > #tabbrowser-arrowscrollbox
-  > .tabbrowser-tab
-  > .tab-stack
-  > .tab-background[selected='true'] {
-  background-image: none !important;
-  background-color: var(--toolbar-bgcolor) !important;
-}
-
-/* Inactive tabs color */
-#navigator-toolbox {
-  background-color: var(--sfwindow) !important;
-}
-
-/* Window colors  */
-:root {
-  --toolbar-bgcolor: var(--sfsecondary) !important;
-  --tabs-border-color: var(--sfsecondary) !important;
-  --lwt-sidebar-background-color: var(--sfwindow) !important;
-  --lwt-toolbar-field-focus: var(--sfsecondary) !important;
-}
-
-/* Sidebar color  */
-#sidebar-box,
-.sidebar-placesTree {
-  background-color: var(--sfwindow) !important;
-}
-
-/* 
-
-┌┬┐┌─┐┬  ┌─┐┌┬┐┌─┐            
- ││├┤ │  ├┤  │ ├┤             
-─┴┘└─┘┴─┘└─┘ ┴ └─┘            
-┌─┐┌─┐┌┬┐┌─┐┌─┐┌┐┌┌─┐┌┐┌┌┬┐┌─┐
-│  │ ││││├─┘│ ││││├┤ │││ │ └─┐
-└─┘└─┘┴ ┴┴  └─┘┘└┘└─┘┘└┘ ┴ └─┘
-
-*/
-
-/* Tabs elements  */
-.tab-close-button {
-  display: none;
-}
-
-.tabbrowser-tab:not([pinned]) .tab-icon-image {
-  display: none !important;
-}
-
-#nav-bar:not([tabs-hidden='true']) {
-  box-shadow: none;
-}
-
-#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])
-  > #tabbrowser-arrowscrollbox
-  > .tabbrowser-tab[first-visible-unpinned-tab] {
-  margin-inline-start: 0 !important;
-}
-
-:root {
-  --toolbarbutton-border-radius: 0 !important;
-  --tab-border-radius: 0 !important;
-  --tab-block-margin: 0 !important;
-}
-
-.tab-background {
-  border-right: 0px solid rgba(0, 0, 0, 0) !important;
-  margin-left: -4px !important;
-}
-
-.tabbrowser-tab:is([visuallyselected='true'], [multiselected])
-  > .tab-stack
-  > .tab-background {
-  box-shadow: none !important;
-}
+/* Compact format */
 
 .tabbrowser-tab[last-visible-tab='true'] {
   padding-inline-end: 0 !important;
@@ -314,12 +184,6 @@ by Miguel Avila
 
 #tabs-newtab-button {
   padding-left: 0 !important;
-}
-
-/* Url Bar  */
-#urlbar-input-container {
-  background-color: var(--sfsecondary) !important;
-  border: 1px solid rgba(0, 0, 0, 0) !important;
 }
 
 #urlbar-container {
@@ -330,61 +194,15 @@ by Miguel Avila
   box-shadow: none !important;
 }
 
-#navigator-toolbox {
-  border: none !important;
-}
+/**
+ * CONTEXT MENU
+ */
 
-/* Bookmarks bar  */
-.bookmark-item .toolbarbutton-icon {
-  display: none;
-}
-toolbarbutton.bookmark-item:not(.subviewbutton) {
-  min-width: 1.6em;
-}
-
-/* Toolbar  */
-#tracking-protection-icon-container,
-#urlbar-zoom-button,
-#star-button-box,
-#pageActionButton,
-#pageActionSeparator,
-#tabs-newtab-button,
-#back-button,
-#PanelUI-button,
-#forward-button,
-.tab-secondary-label {
-  display: none !important;
-}
-
-.urlbarView-url {
-  color: #dedede !important;
-}
-
-/* Disable elements  */
-#context-navigation,
-#context-savepage,
-#context-pocket,
-#context-sendpagetodevice,
-#context-selectall,
-#context-viewsource,
 #context-inspect-a11y,
-#context-sendlinktodevice,
-#context-openlinkinusercontext-menu,
 #context-bookmarklink,
-#context-savelink,
-#context-savelinktopocket,
-#context-sendlinktodevice,
 #context-searchselect,
-#context-sendimage,
-#context-print-selection {
+#context-print-selection,
+#context_bookmarkTab {
   display: none !important;
 }
 
-#context_bookmarkTab,
-#context_moveTabOptions,
-#context_sendTabToDevice,
-#context_reopenInContainer,
-#context_selectAllTabs,
-#context_closeTabOptions {
-  display: none !important;
-}
