--- a/config/eww/eww.scss
+++ b/config/eww/eww.scss
@@ -3,17 +3,39 @@
 }
 
 //Global Styles
+
 .bar {
-  background-color: #3a3a3a;
   color: #b0b4bc;
-  padding: 10px;
+  font-family: "InputMonoCondensed Nerd Font";
+  font-size: 13px;
+  font-weight: 500;
+}
+
+/**
+ * Left side widgets
+ */
+
+.left {
+  padding-left: 12px;
 }
 
 // Styles on classes (see eww.yuck for more information)
 
-.sidestuff slider {
+.metric scale trough highlight {
   all: unset;
-  color: #ffd5cd;
+  background-color: #D35D6E;
+  color: #000000;
+  border-radius: 10px;
+}
+
+.metric scale trough {
+  all: unset;
+  background-color: #4e4e4e;
+  border-radius: 50px;
+  min-height: 3px;
+  min-width: 50px;
+  margin-left: 10px;
+  margin-right: 20px;
 }
 
 .metric scale trough highlight {
@@ -22,6 +44,7 @@
   color: #000000;
   border-radius: 10px;
 }
+
 .metric scale trough {
   all: unset;
   background-color: #4e4e4e;
@@ -31,24 +54,7 @@
   margin-left: 10px;
   margin-right: 20px;
 }
-.metric scale trough highlight {
-  all: unset;
-  background-color: #D35D6E;
-  color: #000000;
-  border-radius: 10px;
-}
-.metric scale trough {
-  all: unset;
-  background-color: #4e4e4e;
-  border-radius: 50px;
-  min-height: 3px;
-  min-width: 50px;
-  margin-left: 10px;
-  margin-right: 20px;
-}
-.label-ram {
-  font-size: large;
-}
+
 .workspaces button:hover {
   color: #D35D6E;
 }
