--- a/config/eww/eww.scss
+++ b/config/eww/eww.scss
@@ -5,7 +5,8 @@
 //Global Styles
 
 .bar {
-  color: #b0b4bc;
+  color: #fff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
   font-family: "InputMonoCondensed Nerd Font";
   font-size: 13px;
   font-weight: 500;
