feat(wm): setting up systemd for both river and sway

--- a/config/eww/eww.scss
+++ b/config/eww/eww.scss
@@ -319,9 +319,9 @@ $ctp-mocha-crust-hsl: hsl(240, 23%, 9%);
 .bar {
   color: $ctp-latte-text;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
-  font-family: "InputMonoCompressed Nerd Font";
+  font-family: "PragmataPro Mono Liga";
   font-size: 13px;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 * {
