--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -63,7 +63,7 @@ overshoot {
 window {
   margin: 0;
   padding: 0;
-  font-family: "InputSansCondensed Nerd Font";
+  font-family: "Public Sans", sans-serif;
   font-size: 12px;
   background: rgba(45, 41, 59, 0.95);
   border: 2px solid #EADDA0;
